--- a/index_values.html
+++ b/index_values.html
@@ -15,74 +15,182 @@
 <table>
 <tr><td align="left"><br>A</td></tr>
 <tr><td><a href="Posix_math.html#VALacos">acos</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">acos x</code> calculates the arc cosine of x; in principle <code class="code">cos (acos x) = x</code> holds but for floating point rounding errors.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALacosh">acosh</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">acosh x</code> computes the hyperbolic cosine of x;  in principle <code class="code">cosh (acosh x) = x</code> holds but for floating point rounding errors.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALasin">asin</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">asin x</code> computes the arc sine os x; in principle <code class="code">sin (asin x) = x</code> holds but for floating point rounding errors.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALasinh">asinh</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">asinh x</code> computes the inverse hyperbolic sine of x; in principle <code class="code">sinh (asinh x) = x</code> holds but for floating point rounding errors.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALatan">atan</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">atan x</code> computes the arc tangent of x; in principle <code class="code">tan (atan x) = x</code> holds but for floating point rounding errors.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALatan2">atan2</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">atan2 x y</code> computes the arc tangent of <code class="code">y ./ x</code> in radians.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALatanh">atanh</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">atanh x</code> computes the inverse hyperbolic tangent of x; in principle <code class="code">tanh (atanh x) = x</code> holds but for floating point rounding errors.
+</div>
+</td></tr>
 <tr><td align="left"><br>C</td></tr>
 <tr><td><a href="Posix_math.html#VALcabs">cabs</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">cabs z</code> returns the absolute value of the complex number <code class="code">z</code>.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALcacos">cacos</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">cacos z</code> calculates  the complex arc cosine of <code class="code">z</code>.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALcacosh">cacosh</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">cacosh z</code> calculates the complex arc hyperbolic cosine of <code class="code">z</code>.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALcarg">carg</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">carg z</code> computes the radius of the number <code class="code">z</code> in polar coordinates.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALcasin">casin</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">casin z</code> computes the complex arc sine of <code class="code">z</code>.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALcasinh">casinh</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">casinh z</code> computes the complex arc hyperbolic sine of z.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALcatan">catan</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">catan z</code> computes the  complex  arc  tangent  of  z.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALcatanh">catanh</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">catanh z</code> computes the complex arc hyperbolic tangent of z.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALcbrt">cbrt</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">cbrt x</code> computes the (real) cube root of <code class="code">x</code>.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALccos">ccos</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">ccos z</code> computes the complex cosine of <code class="code">z</code>.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALccosh">ccosh</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">ccosh z</code> computes the complex hyperbolic cosine of <code class="code">z</code>.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALceil">ceil</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">ceil x</code> computes the smallest integral value not less than <code class="code">x</code>.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALcexp">cexp</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">cexp z</code> computes the complex exponent of <code class="code">z</code>, defined as e^z.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALcimag">cimag</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">cimag z</code> computes the imaginary part of <code class="code">z</code>.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALclog">clog</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">clog z</code> computes the complex natural (base e) logarithm of <code class="code">z</code>, with a branch cut along the negative real axis.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALconj">conj</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">conj z</code> computes the complex conjugate of <code class="code">z</code>, by reversing the sign of its imaginary part.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALcopysign">copysign</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">copysign x y</code> computes a value with the magnitude of <code class="code">x</code> and the sign of <code class="code">y</code>.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALcos">cos</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">cos x</code> computes the cosine of <code class="code">x</code>, measured in radians.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALcosh">cosh</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">cosh</code> computes the hyperbolic cosine of <code class="code">x</code>.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALcpow">cpow</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">cpow x y</code> computes the complex power function x^y, with a branch cut for the first parameter along the negative real axis.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALcproj">cproj</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">cproj z</code> computes a projection of <code class="code">z</code> onto the Riemann sphere.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALcreal">creal</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">creal z</code> computes the real part of <code class="code">z</code>.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALcsin">csin</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">csin z</code> computes the complex sine of <code class="code">z</code>.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALcsinh">csinh</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">csinh z</code> computes the complex hyperbolic sine of <code class="code">z</code>.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALcsqrt">csqrt</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">csqrt z</code> computes the complex square root of <code class="code">z</code>, with a branch cut along the negative real axis.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALctan">ctan</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">ctan z</code> compute the complex tangent of <code class="code">z</code>.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALctanh">ctanh</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">ctanh z</code> computes the complex hyperbolic tangent of <code class="code">z</code>.
+</div>
+</td></tr>
+<tr><td align="left"><br>E</td></tr>
+<tr><td><a href="Posix_math.html#VALexp">exp</a> [<a href="Posix_math.html">Posix_math</a>]</td>
+<td><div class="info">
+<code class="code">exp x</code> computes the base-e exponential of <code class="code">x</code>.
+</div>
+</td></tr>
 <tr><td align="left"><br>F</td></tr>
 <tr><td><a href="Posix_math.Fexcepts.html#VALfe_all_except">fe_all_except</a> [<a href="Posix_math.Fexcepts.html">Posix_math.Fexcepts</a>]</td>
 <td></td></tr>
@@ -128,45 +236,96 @@
 <td></td></tr>
 <tr><td align="left"><br>L</td></tr>
 <tr><td><a href="Posix_math.html#VALldexp">ldexp</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">ldexp x i</code> computes the quantity <code class="code">x .* 2 ^ exp</code>.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALlgamma">lgamma</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">lgamma x</code> returns the natural logarithm of the absolute value of the Gamma function.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALllrint">llrint</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">llrint x</code> rounds it's argument to the nearest integer value, rounding according to the current rounding direction.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALllround">llround</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">llround x</code> rounds it's argument to the nearest integer value, rounding halfway cases away from zero, regardless of the current rounding direction.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALlog">log</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">log x</code> computes the natural logarithm of their argument <code class="code">x</code>.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALlog10">log10</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">log10 x</code> computes the base 10 logarithm of their argument <code class="code">x</code>.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALlog1p">log1p</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">log1p x</code> returns a value equivalent to <code class="code">log (1 + x)</code>.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALlog2">log2</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">log2 x</code> computes the base 2 logarithm of their argument <code class="code">x</code>.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALlogb">logb</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">logb x</code> extracts the exponent from the internal floating-point representation of <code class="code">x</code> and return it as a floating-point value.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALlrint">lrint</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">lrint x</code> rounds it's argument to the nearest integer value, rounding according to the current rounding direction.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALlround">lround</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">lround x</code> rounds it's argument to the nearest integer value, rounding halfway cases away from zero, regardless of the current rounding direction.
+</div>
+</td></tr>
 <tr><td align="left"><br>M</td></tr>
 <tr><td><a href="Posix_math.html#VALmodf">modf</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">modf x</code> break the argument <code class="code">x</code> into integral and fractional parts, each of which has the same sign as the argument.
+</div>
+</td></tr>
 <tr><td align="left"><br>N</td></tr>
 <tr><td><a href="Posix_math.html#VALnearbyint">nearbyint</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">nearbyint x</code> rounds it's argument to an integer value in floating-point format, using the current rounding direction and without raising the inexact floating-point exception.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALnextafter">nextafter</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">nextafter x y</code> computes the next representable floating-point value following x in the direction of y.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALnexttoward">nexttoward</a> [<a href="Posix_math.html">Posix_math</a>]</td>
 <td></td></tr>
 <tr><td align="left"><br>P</td></tr>
 <tr><td><a href="Posix_math.html#VALpow">pow</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">pow x y</code> computes the value of <code class="code">x</code> raised to the power <code class="code">y</code>.
+</div>
+</td></tr>
 <tr><td align="left"><br>R</td></tr>
 <tr><td><a href="Posix_math.html#VALremainder">remainder</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">remainder x y</code> computes the remainder of dividing <code class="code">x</code> by <code class="code">y</code>.
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALremquo">remquo</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+<code class="code">remquo x y</code>
+</div>
+</td></tr>
 <tr><td><a href="Posix_math.html#VALrint">rint</a> [<a href="Posix_math.html">Posix_math</a>]</td>
 <td></td></tr>
 <tr><td><a href="Posix_math.html#VALround">round</a> [<a href="Posix_math.html">Posix_math</a>]</td>
