--- a/type_Posix_math.html
+++ b/type_Posix_math.html
@@ -44,6 +44,7 @@
 &nbsp;&nbsp;<span class="keyword">val</span>&nbsp;csqrt&nbsp;:&nbsp;<span class="constructor">Posix_math</span>.complex&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="constructor">Posix_math</span>.complex<br>
 &nbsp;&nbsp;<span class="keyword">val</span>&nbsp;ctan&nbsp;:&nbsp;<span class="constructor">Posix_math</span>.complex&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="constructor">Posix_math</span>.complex<br>
 &nbsp;&nbsp;<span class="keyword">val</span>&nbsp;ctanh&nbsp;:&nbsp;<span class="constructor">Posix_math</span>.complex&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;<span class="constructor">Posix_math</span>.complex<br>
+&nbsp;&nbsp;<span class="keyword">val</span>&nbsp;exp&nbsp;:&nbsp;float&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;float<br>
 &nbsp;&nbsp;<span class="keyword">val</span>&nbsp;ldexp&nbsp;:&nbsp;float&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;int&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;float<br>
 &nbsp;&nbsp;<span class="keyword">val</span>&nbsp;lgamma&nbsp;:&nbsp;float&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;float<br>
 &nbsp;&nbsp;<span class="keyword">val</span>&nbsp;llrint&nbsp;:&nbsp;float&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;int64<br>
