--- a/index_types.html
+++ b/index_types.html
@@ -15,7 +15,10 @@
 <table>
 <tr><td align="left"><br>C</td></tr>
 <tr><td><a href="Posix_math.html#TYPEcomplex">complex</a> [<a href="Posix_math.html">Posix_math</a>]</td>
-<td></td></tr>
+<td><div class="info">
+A comlex number as defined in the standard library
+</div>
+</td></tr>
 <tr><td align="left"><br>T</td></tr>
 <tr><td><a href="Posix_math.Fround.html#TYPEt">t</a> [<a href="Posix_math.Fround.html">Posix_math.Fround</a>]</td>
 <td></td></tr>
